added documentation to delete and update user routes
